--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   </nav>
   <main>
     <p>Email: contact@myshop.com</p>
-    <p>Phone: +91-98765-43210</p>
+    <p>Phone: +91-</p>
   </main>
   <footer>© 2025 My Shop</footer>
 </body>
