--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,30 @@
   </nav>
   <main>
     <p>Email: contact@myshop.com</p>
-    <p>Phone: +91-</p>
+    <p>Phone: +91-967-845-0123</p>
+    <p>Adress: 123 Main Street, City, state 12345</p>
+    <p>Business Hours: Mon-Fri 9AM-6PM</p>
+    <p>Fax:+91-987-654-3210</p>
+    <form>
+    <h2>Send us a message</h2>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required>
+    
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <label for="message">Message:</label>
+    <textarea id="message" name="message" rows="4" cols="50" required></textarea>
+
+    <button type="submit">Send Message</button>
+    </form>
   </main>
+  <div>
+    <p>Follow us on:</p>
+    <a href="#">Facebook</a>
+    <a href="#">Twitter</a>
+    <a href="#">Instagram</a>
+   </div>
   <footer>© 2025 My Shop</footer>
 </body>
 </html>
