about file has been updated

--- a/about.html
+++ b/about.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Shop - About Us</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header><h1>About My Shop</h1></header>
+  <header>
+    <h1>About My Shop</h1>
+  </header>
+
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
-  <main>
-    <p>We are a small business selling quality products at great prices.</p>
+
+  <main class="about">
+    <section class="about-intro">
+      <h2>Our Mission</h2>
+      <p>At My Shop, we believe everyone deserves access to affordable, high-quality products. We are passionate about delivering exceptional customer service and curating products that bring joy and value to your everyday life.</p>
+    </section>
+
+    <section class="about-image">
+      <img src="images/team.jpg" alt="Our Team" />
+    </section>
+
+    <section class="about-team">
+      <h2>Meet Our Team</h2>
+      <p>We're a team of passionate creators, curators, and customer care experts working together to make your shopping experience seamless and enjoyable.</p>
+    </section>
   </main>
-  <footer>© 2025 My Shop</footer>
+
+  <footer>
+    © 2025 My Shop. All rights reserved.
+  </footer>
 </body>
 </html>
