"Fixing Bug : Accidently deleted form  and Fixed the bugs in the enhanced file"

--- a/contact.html
+++ b/contact.html
@@ -10,21 +10,38 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact<
+    <a href="contact.html">Contact</a>
+  </nav>
+  <main>
+    <p>Email: contact@myshop.com</p>
+    <p>Phone: +91-967-845-0123</p>
+    <p>Adress: 123 Main Street, City, state 12345</p>
+    <p>Business Hours: Mon-Fri 9AM-6PM</p>
+    <p>Fax:+91-987-654-3210</p>
+
+     <form>
+    <h2>Send us a message</h2>
+
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" required><br><br>
+    
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required><br><br>
 
     <label for="message">Message:</label>
     <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
 
     <button type="submit">Send Message</button>
     </form>
-  </main>
+   </main>
   <div>
     <p>Follow us on:</p>
     <a href="#">Facebook</a> |
     <a href="#">Twitter</a> |
     <a href="#">Instagram</a>
    </div>
-  <footer><p>© 2025 My Shop</p>
+  <footer>
+    <p>© 2025 My Shop</p>
   </footer>
 </body>
 </html>
