--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My Shop - Contact</title>
+  <title>About My Shop - Contact</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,7 +10,7 @@
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="about.html">About</a>
-    <a href="contact.html">Contact<</a>
+    <a href="contact.html">Contact</a>
   </nav>
   <main>
     <p>Email: contact@myshop.com</p>
