--- a/index.html
+++ b/index.html
@@ -1,21 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Shop - Home</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tech Shop</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header><h1>Welcome to My Shop</h1></header>
-  <nav>
+  <header>
+    <h1>Tech Gadget Store</h1>
+    <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
-  </nav>
-  <main>
-    <h2>Featured Products</h2>
-    <p>Explore our collection of amazing items.</p>
+    </nav>
+  </header>
+
+  <main class="product-grid">
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x150?text=Headphones" alt="Headphones" />
+      <h2>Wireless Headphones</h2>
+      <p>₹2,499</p>
+      <button>Add to Cart</button>
+    </div>
+    
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x150?text=Gaming+Mouse" alt="Gaming Mouse" />
+      <h2>Gaming Mouse</h2>
+      <p>₹999</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x150?text=Keyboard" alt="Keyboard" />
+      <h2>Mechanical Keyboard</h2>
+      <p>₹3,199</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x150?text=Webcam" alt="Webcam" />
+      <h2>HD Webcam</h2>
+      <p>₹1,799</p>
+      <button>Add to Cart</button>
+    </div>
+
+    <div class="product-card">
+      <img src="https://via.placeholder.com/200x150?text=Bluetooth+Speaker" alt="Bluetooth Speaker" />
+      <h2>Bluetooth Speaker</h2>
+      <p>₹1,299</p>
+      <button>Add to Cart</button>
+    </div>
   </main>
-  <footer>© 2025 My Shop</footer>
+
+  <footer>
+    <p>&copy; 2025 Tech Gadget Store. All rights reserved.</p>
+  </footer>
 </body>
 </html>
