--- a/products.html
+++ b/products.html
@@ -6,12 +6,14 @@
 </head>
 <body>
   <header><h1>Our Products</h1></header>
+<header>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
+</header>
   <main>
     <h2>Popular Items</h2>
     <ul>
