about page altered

--- a/about.html
+++ b/about.html
@@ -10,6 +10,8 @@
   <header>
     <h1>About My Shop</h1>
   </header>
+  
+  <header>
 
   <nav>
     <a href="index.html">Home</a>
@@ -17,6 +19,7 @@
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
+  </header>
 
   <main class="about">
     <section class="about-intro">
