--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,14 @@
 </head>
 <body>
   <header><h1>Contact Us</h1></header>
+  <header>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="about.html">About</a>
     <a href="contact.html">Contact</a>
   </nav>
+  </header>
   <main>
     <p>Email: contact@myshop.com</p>
     <p>Phone: +91-967-845-0123</p>
