Latest UI for Ecommerce Web

--- a/contact.html
+++ b/contact.html
@@ -21,29 +21,33 @@
     <p>Business Hours: Mon-Fri 9AM-6PM</p>
     <p>Fax:+91-987-654-3210</p>
 
-     <form>
-    <h2>Send us a message</h2>
-
-    <label for="name">Name:</label>
-    <input type="text" id="name" name="name" required><br><br>
-    
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br><br>
-
-    <label for="message">Message:</label>
-    <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
-
+  <form class="contact-form">
+    <input type="text" placeholder="Name" required />
+    <input type="email" placeholder="Email" required />
+    <textarea placeholder="Message" required></textarea>
     <button type="submit">Send Message</button>
-    </form>
-    </main>
+  </form>
+  </main>
   <div>
     <p>Follow us on:</p>
     <a href="#">Facebook</a> |
     <a href="#">Twitter</a> |
     <a href="#">Instagram</a>
    </div>
+
+  <script>
+    const links = document.querySelectorAll('nav a');
+    const current = window.location.pathname.split('/').pop() || 'index.html';
+
+    links.forEach(link => {
+      if (link.getAttribute('href') === current) {
+        link.classList.add('active');
+      }
+    });
+  </script>
+  
   <footer>
-    <p>© 2025 My Shop</p>
+    <p>© 2025 My Shop. All rights reserved.</p>
   </footer>
 </body>
 </html>
