--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
     </div>
 
     <div class="product-card">
-      <img src="images/smartwatch.jpg" alt="Smartwatch" />
+      <img src="images/smartwatch.jpeg" alt="Smartwatch" />
       <h2>Smartwatch</h2>
       <p>₹1,899</p>
       <button>Add to Cart</button>
     </div>
 
     <div class="product-card">
-      <img src="images/powerbank.jpg" alt="Power Bank" />
+      <img src="images/powerbank.jpeg" alt="Power Bank" />
       <h2>Power Bank 20,000mAh</h2>
       <p>₹1,099</p>
       <button>Add to Cart</button>
     </div>
 
     <div class="product-card">
-      <img src="images/usb-hub.jpg" alt="USB Hub" />
+      <img src="images/usb-hub.jpeg" alt="USB Hub" />
       <h2>USB Hub 4-Port</h2>
       <p>₹499</p>
       <button>Add to Cart</button>
