Edited Products.html file

--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
         <div class="grid">
             <!-- Product Cards -->
             <div class="product electronics">
-                <img src="images/Powerbank.jpg" alt="Powerbank" />
+                <img src="Product Images/Powerbank.jpg" alt="Powerbank" />
                 <div class="product-info">
                     <h3>Powerbank</h3>
                     <p>33 W (Backup up to 60 hours)</p>
@@ -31,7 +31,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="images/Soundbar.jpg" alt="Sound Bar" />
+                <img src="Product Images/Soundbar.jpg" alt="Sound Bar" />
                 <div class="product-info">
                     <h3>Sound Bar</h3>
                     <p>330 W with inbuilt Subwoofers</p>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="images/pendrive.jpg" alt="Pendrive" />
+                <img src="Product Images/pendrive.jpg" alt="Pendrive" />
                 <div class="product-info">
                     <h3>Pendrive</h3>
                     <p>128 GB</p>
@@ -51,7 +51,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="images/headphone.jpg" alt="Bluetooth Headphones" />
+                <img src="Product Images/headphone.jpg" alt="Bluetooth Headphones" />
                 <div class="product-info">
                     <h3>Bluetooth Headphones</h3>
                     <p>Wireless audio</p>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="images/Smartwatch.jpg" alt="Smartwatch" />
+                <img src="Product Images/Smartwatch.jpg" alt="Smartwatch" />
                 <div class="product-info">
                     <h3>Smartwatch</h3>
                     <p>Fitness & notifications</p>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="images/Earbuds.jpg" alt="Wireless Earbuds" />
+                <img src="Product Images/Earbuds.jpg" alt="Wireless Earbuds" />
                 <div class="product-info">
                     <h3>Wireless Earbuds</h3>
                     <p>Compact & powerful</p>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="images/Sunglass.jpg" alt="Stylish Sunglasses" />
+                <img src="Product Images/Sunglass.jpg" alt="Stylish Sunglasses" />
                 <div class="product-info">
                     <h3>Stylish Sunglasses</h3>
                     <p>UV protection</p>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="images/Backpack.jpg" alt="Casual Backpack" />
+                <img src="Product Images/Backpack.jpg" alt="Casual Backpack" />
                 <div class="product-info">
                     <h3>Casual Backpack</h3>
                     <p>Everyday use</p>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="images/Shoes.jpg" alt="Running Shoes" />
+                <img src="Product Images/Shoes.jpg" alt="Running Shoes" />
                 <div class="product-info">
                     <h3>Running Shoe</h3>
                     <p>Comfort & performance</p>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="images/Hoodie.jpg" alt="Trendy Hoodie" />
+                <img src="Product Images/Hoodie.jpg" alt="Trendy Hoodie" />
                 <div class="product-info">
                     <h3>Trendy Hoodie</h3>
                     <p>Warm & stylish</p>
