Editied Header in the product.html file

--- a/products.html
+++ b/products.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="products.css" />
 </head>
 <body>
+  <header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  </header>
 
     <!-- Sidebar -->
     <nav class="sidebar">
