Updated Products.html file

--- a/products.html
+++ b/products.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Our Products</title>
-    <link rel="stylesheet" href="products.css" />
+  <meta charset="UTF-8">
+  <title>My Shop - Products</title>
+  <link rel="stylesheet" href="products.css">
 </head>
 <body>
+
   <header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+    <h1>Our Products</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
-    <!-- Sidebar -->
+  <!-- Sidebar -->
     <nav class="sidebar">
         <h2>🧺 Products List</h2>
         <a href="#" data-category="all">Show All</a>
@@ -29,7 +30,7 @@
         <div class="grid">
             <!-- Product Cards -->
             <div class="product electronics">
-                <img src="Product Images/Powerbank.jpg" alt="Powerbank" />
+                <img src="ProductImages/Powerbank.jpg" alt="Powerbank" />
                 <div class="product-info">
                     <h3>Powerbank</h3>
                     <p>33 W (Backup up to 60 hours)</p>
@@ -39,7 +40,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="Product Images/Soundbar.jpg" alt="Sound Bar" />
+                <img src="ProductImages/Soundbar.jpg" alt="Sound Bar" />
                 <div class="product-info">
                     <h3>Sound Bar</h3>
                     <p>330 W with inbuilt Subwoofers</p>
@@ -49,7 +50,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="Product Images/pendrive.jpg" alt="Pendrive" />
+                <img src="ProductImages/pendrive.jpg" alt="Pendrive" />
                 <div class="product-info">
                     <h3>Pendrive</h3>
                     <p>128 GB</p>
@@ -59,7 +60,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="Product Images/headphone.jpg" alt="Bluetooth Headphones" />
+                <img src="ProductImages/headphone.jpg" alt="Bluetooth Headphones" />
                 <div class="product-info">
                     <h3>Bluetooth Headphones</h3>
                     <p>Wireless audio</p>
@@ -69,7 +70,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="Product Images/Smartwatch.jpg" alt="Smartwatch" />
+                <img src="ProductImages/Smartwatch.jpg" alt="Smartwatch" />
                 <div class="product-info">
                     <h3>Smartwatch</h3>
                     <p>Fitness & notifications</p>
@@ -79,7 +80,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="Product Images/Earbuds.jpg" alt="Wireless Earbuds" />
+                <img src="ProductImages/Earbuds.jpg" alt="Wireless Earbuds" />
                 <div class="product-info">
                     <h3>Wireless Earbuds</h3>
                     <p>Compact & powerful</p>
@@ -89,7 +90,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="Product Images/Sunglass.jpg" alt="Stylish Sunglasses" />
+                <img src="ProductImages/Sunglass.jpg" alt="Stylish Sunglasses" />
                 <div class="product-info">
                     <h3>Stylish Sunglasses</h3>
                     <p>UV protection</p>
@@ -99,7 +100,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="Product Images/Backpack.jpg" alt="Casual Backpack" />
+                <img src="ProductImages/Backpack.jpg" alt="Casual Backpack" />
                 <div class="product-info">
                     <h3>Casual Backpack</h3>
                     <p>Everyday use</p>
@@ -109,7 +110,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="Product Images/Shoes.jpg" alt="Running Shoes" />
+                <img src="ProductImages/Shoes.jpg" alt="Running Shoes" />
                 <div class="product-info">
                     <h3>Running Shoe</h3>
                     <p>Comfort & performance</p>
@@ -119,7 +120,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="Product Images/Hoodie.jpg" alt="Trendy Hoodie" />
+                <img src="ProductImages/Hoodie.jpg" alt="Trendy Hoodie" />
                 <div class="product-info">
                     <h3>Trendy Hoodie</h3>
                     <p>Warm & stylish</p>
