2nd Update on Products.html file

--- a/products.html
+++ b/products.html
@@ -30,7 +30,7 @@
         <div class="grid">
             <!-- Product Cards -->
             <div class="product electronics">
-                <img src="ProductImages/Powerbank.jpg" alt="Powerbank" />
+                <img src="Product Images/Powerbank.jpg" alt="Powerbank" />
                 <div class="product-info">
                     <h3>Powerbank</h3>
                     <p>33 W (Backup up to 60 hours)</p>
@@ -40,7 +40,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="ProductImages/Soundbar.jpg" alt="Sound Bar" />
+                <img src="Product Images/Soundbar.jpg" alt="Sound Bar" />
                 <div class="product-info">
                     <h3>Sound Bar</h3>
                     <p>330 W with inbuilt Subwoofers</p>
@@ -50,7 +50,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="ProductImages/pendrive.jpg" alt="Pendrive" />
+                <img src="Product Images/pendrive.jpg" alt="Pendrive" />
                 <div class="product-info">
                     <h3>Pendrive</h3>
                     <p>128 GB</p>
@@ -60,7 +60,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="ProductImages/headphone.jpg" alt="Bluetooth Headphones" />
+                <img src="Product Images/headphone.jpg" alt="Bluetooth Headphones" />
                 <div class="product-info">
                     <h3>Bluetooth Headphones</h3>
                     <p>Wireless audio</p>
@@ -70,7 +70,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="ProductImages/Smartwatch.jpg" alt="Smartwatch" />
+                <img src="Product Images/Smartwatch.jpg" alt="Smartwatch" />
                 <div class="product-info">
                     <h3>Smartwatch</h3>
                     <p>Fitness & notifications</p>
@@ -80,7 +80,7 @@
             </div>
 
             <div class="product electronics">
-                <img src="ProductImages/Earbuds.jpg" alt="Wireless Earbuds" />
+                <img src="Product Images/Earbuds.jpg" alt="Wireless Earbuds" />
                 <div class="product-info">
                     <h3>Wireless Earbuds</h3>
                     <p>Compact & powerful</p>
@@ -90,7 +90,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="ProductImages/Sunglass.jpg" alt="Stylish Sunglasses" />
+                <img src="Product Images/Sunglass.jpg" alt="Stylish Sunglasses" />
                 <div class="product-info">
                     <h3>Stylish Sunglasses</h3>
                     <p>UV protection</p>
@@ -100,7 +100,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="ProductImages/Backpack.jpg" alt="Casual Backpack" />
+                <img src="Product Images/Backpack.jpg" alt="Casual Backpack" />
                 <div class="product-info">
                     <h3>Casual Backpack</h3>
                     <p>Everyday use</p>
@@ -110,7 +110,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="ProductImages/Shoes.jpg" alt="Running Shoes" />
+                <img src="Product Images/Shoes.jpg" alt="Running Shoes" />
                 <div class="product-info">
                     <h3>Running Shoe</h3>
                     <p>Comfort & performance</p>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="product fashion">
-                <img src="ProductImages/Hoodie.jpg" alt="Trendy Hoodie" />
+                <img src="Product Images/Hoodie.jpg" alt="Trendy Hoodie" />
                 <div class="product-info">
                     <h3>Trendy Hoodie</h3>
                     <p>Warm & stylish</p>
